complete above the fold

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 body {
     color: black;
     font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 
 .container {
@@ -21,6 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    margin-bottom: 76px;
 }
 
 .logo {
@@ -57,4 +59,27 @@ body {
 
 .nav-link.active {
     color: #606060;
+}
+
+/*Header content*/
+
+.header-row {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 30px;
+}
+
+.header-content {
+    margin-top: 124px;
+    max-width: 500px;
+}
+
+.header-heading {
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 44px;
+}
+
+.header-heading p {
+    line-height: 2;
 }
