--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,34 @@ body {
 .header-heading p {
     line-height: 2;
 }
+
+/*Services*/
+
+.services {
+    padding: 90px 0;
+}
+
+.services-row {
+    display: flex;
+    column-gap: 30px;
+
+}
+
+.service-card {
+
+}
+
+.service-card-img {
+    margin-bottom: 30px;
+}
+
+.service-card-title {
+    font-weight: 600;
+    margin-bottom: 10px;
+    font-size: 24px;
+    text-transform: uppercase;
+}
+
+.service-card p {
+    line-height: 2;
+}
