--- a/css/main.css
+++ b/css/main.css
@@ -114,3 +114,41 @@ body {
 .service-card p {
     line-height: 2;
 }
+
+/*Portfolio*/
+
+.portfolio {
+    padding: 90px 0;
+    background-color: #F1F1F1;
+}
+
+.portfolio-title {
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+.title-1 {
+    font-size: 34px;
+    font-weight: 600;
+}
+
+.project {
+    text-align: center;
+}
+
+.project + .project {
+    margin-top: 90px;
+}
+
+.project-img {
+    margin-bottom: 40px;
+}
+
+.project-title {
+    font-size: 18px;
+}
+
+.project-title a {
+    color: #000000;
+    text-decoration: underline;
+}
