--- a/css/main.css
+++ b/css/main.css
@@ -97,11 +97,13 @@ body {
 .services-row {
     display: flex;
     column-gap: 30px;
-
+    row-gap: 60px;
+    flex-wrap: wrap;
 }
 
 .service-card {
-
+    flex: 1 1 0;
+    min-width: 315px;
 }
 
 .service-card-img {
