--- a/css/media.css
+++ b/css/media.css
@@ -49,8 +49,12 @@
 @media (max-width: 700px) {
     .header-heading {
         font-size: 34px;
+        line-height: 1.3;
     }
     .header-heading span {
         font-size: 28px;
+    }
+    .services {
+        padding: 60px 0;
     }
 }
