--- a/css/media.css
+++ b/css/media.css
@@ -51,10 +51,28 @@
         font-size: 34px;
         line-height: 1.3;
     }
+
     .header-heading span {
         font-size: 28px;
     }
+
     .services {
         padding: 60px 0;
+    }
+
+    .portfolio {
+        padding: 60px 0;
+    }
+
+    .portfolio-title {
+        margin-bottom: 50px;
+    }
+
+    .project-img {
+        margin-bottom: 30px;
+    }
+
+    .project + .project {
+        margin-top: 55px;
     }
 }
